--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 absl-py==0.9.0
 alabaster==0.7.12
+anaconda-client==1.7.2
+anaconda-navigator==1.9.12
+anaconda-project==0.8.3
 applaunchservices==0.2.1
 appnope==0.1.0
 appscript==1.0.1
@@ -29,7 +32,13 @@ certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
 Click==7.0
+cloudpickle==1.4.1
+clyent==1.2.2
 colorama==0.4.3
+conda==4.8.3
+conda-build==3.18.11
+conda-package-handling==1.6.0
+conda-verify==3.4.2
 contextlib2==0.6.0.post1
 cryptography==2.8
 cycler==0.10.0
@@ -102,11 +111,15 @@ MarkupSafe==1.1.1
 matplotlib==3.1.3
 mccabe==0.6.1
 mistune==0.8.4
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
 mock==4.0.1
 more-itertools==8.2.0
 mpmath==1.1.0
 msgpack==0.6.1
 multipledispatch==0.6.0
+navigator-updater==0.2.1
 nbconvert==5.6.1
 nbformat==5.0.4
 networkx==2.4
@@ -156,6 +169,7 @@ pydocstyle==4.0.1
 pyflakes==2.1.1
 Pygments==2.5.2
 pylint==2.4.4
+pyodbc===4.0.0-unsupported
 pyOpenSSL==19.1.0
 pyparsing==2.4.6
 pyrsistent==0.15.7
@@ -181,51 +195,11 @@ QtPy==1.9.0
 regex==2020.6.8
 requests==2.22.0
 requests-oauthlib==1.3.0
-rope==0.16.0
-rsa==4.6
-ruamel-yaml==0.15.87
-sacremoses==0.0.43
-scikit-image==0.16.2
-scikit-learn==0.22.1
-scipy==1.4.1
-seaborn==0.10.0
-Send2Trash==1.5.0
-sentencepiece==0.1.91
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.14.0
-snowballstemmer==2.0.0
-sortedcollections==1.1.2
-sortedcontainers==2.1.0
-soupsieve==1.9.5
-Sphinx==2.4.0
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-sphinxcontrib-websupport==1.2.0
-spyder==4.0.1
-spyder-kernels==1.8.1
-SQLAlchemy==1.3.13
-statsmodels==0.11.0
-sympy==1.5.1
-tables==3.6.1
-tblib==1.6.0
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.6.0.post3
 tensorflow==2.2.0
 tensorflow-cpu==2.2.0
 tensorflow-estimator==2.2.0
 tensorflow-probability==0.9.0
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
 tokenizers==0.7.0
-toolz==0.10.0
-tornado==6.0.3
-tqdm==4.42.1
-traitlets==4.3.3
 transformers==2.11.0
-
